--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,11 @@
     box-sizing: border-box;
 }
 
+*:focus {
+    outline: 2px dashed #7296EC;
+    outline-offset: 3px;
+}
+
 html {
     height: 100%;
     scroll-behavior: smooth;
@@ -26,6 +31,25 @@ img {
     height: auto;
 }
 
+.button {
+    text-decoration: none;
+    padding: 13px 20px;
+    color: #fff;
+    background-color: #7296EC;
+    border-radius: 10px;
+    font-size: 500;
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.button:hover {
+    opacity: 0.8;
+}
+
+.button:active {
+    opacity: 0.8;
+}
+
 
 /* CONTAINER */
 .container {
@@ -35,4 +59,101 @@ img {
     padding-right: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+
+
+/* SITE-HEADER */
+.site-header-top {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #f6f6f6;
+}
+
+.site-header-top-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.site-header-top-inner {
+    display: flex;
+    align-items: center;
+}
+
+.site-header-logo {
+    display: inline-flex;
+    margin-right: 35px;
+    padding: 8px 6px;
+    border-radius: 7px;
+    background-color: #fff;
+}
+
+.site-header-logo:hover {
+    opacity: 0.8;
+}
+
+.site-header-logo:active {
+    opacity: 0.8;
+}
+
+.currency-rates {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.currency-rates-item:not(:last-child) {
+    margin-right: 25px;
+}
+.currency-rates-type {
+    font-weight: 700;
+    color: #2959CE;
+}
+
+.currency-rates-value {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+}
+
+
+.site-search {
+    display: inline-flex;
+    width: 275px;
+    margin-right: 25px;
+    padding: 0;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 40px;
+    border: none;
+    border-radius: 60px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #8d8d8d;
+}
+
+.lang-toggle {
+    padding: 3px;
+    border-radius: 39px;
+    margin-right: 25px;
+    background-color: #DCE6FF;
+}
+
+.lang-toggle-link {
+    display: inline-flex;
+    text-decoration: none;
+    padding: 8px;
+    border-radius: 50%;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 15px;
+    color: #a6a6a6;
+    background-color: transparent;
+}
+
+.lang-toggle-link-active {
+    color: #000;
+    background-color: #fff;
 }
