--- a/css/styles.css
+++ b/css/styles.css
@@ -161,11 +161,9 @@ img {
 /* SITENAV */
 .sitenav {
     background-color: #fff;
-}
-
-.sitenav-container {
     padding-bottom: 20px;
     padding-top: 30px;
+    border-bottom: 2px solid #d2d2d2;
 }
 
 .sitenav-list {
