--- a/css/styles.css
+++ b/css/styles.css
@@ -201,5 +201,91 @@ img {
 .site-header-banner-img {
     width: 1200px;
     height: 128px;
+    margin-bottom: 50px;
     border-radius: 8px;
+}
+
+/* NEWS */
+.news {
+    background-color: #fff;
+}
+
+.news-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.news-item {
+    display: inline-flex;
+    flex-direction: column;
+    padding: 20px 18px 15px 18px;
+    width: 385px;
+    background-color: #f6f6f6;
+    border-radius: 15px;
+}
+
+.news-item:not(:nth-child(3)) {
+    margin-right: 10px;
+}
+
+.news-item:nth-child(-n+3) {
+    margin-bottom: 10px;
+}
+
+.news-title {
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.news-title-link {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 26px;
+    color: #000;
+}
+
+.news-title-link:hover {
+    color: #7296ec;
+}
+
+.news-title-link:active {
+    opacity: 0.6;
+}
+
+.news-text {
+    margin: 0;
+    margin-bottom: 15px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #4a4b4c;
+}
+
+.news-img {
+    margin-bottom: 15px;
+    width: 360px;
+    height: 165px;
+}
+
+.news-time {
+    display: flex;
+    align-items: center;
+}
+
+.news-time-icon {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+}
+
+.news-time-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: #5e5f61;
 }
