--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ img {
 .button {
     display: inline-block;
     padding: 13px 20px;
+    border: 0;
     border-radius: 10px;
     font-size: 16px;
     line-height: normal;
@@ -47,17 +48,23 @@ img {
     cursor: pointer;
 }
 
+.button:hover {
+    opacity: 0.8;
+}
+
+.button:active {
+    opacity: 0.6;
+}
+
 .button-primary {
     background-color: #7296ec;
     color: #fff; 
 }
 
-.button-primary:hover {
-    opacity: 0.8;
-}
-
-.button-primary:active {
-    opacity: 0.6;
+.button-orange {
+    border-radius: 10px;
+    color: #fff;
+    background-color: #f78b3b;  
 }
 
 
@@ -314,3 +321,20 @@ img {
 
 /* .article-card-source {
 } */
+
+
+/* NOTIFICATION-CTA */
+.notifications-cta {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 25px 70px 25px 25px;
+    margin: 60px 75px;
+    background-color: #ffd7ba;
+}
+
+.notification-cta-text {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+}
